2007-10-29  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac:
	* clutter/cogl/gl/cogl-defines.h.in: The OS X backend has a funny
	OpenGL header location, so it basically did break every application
	including clutter/cogl.h because the GL header inclusion depended
	on symbols defined into Clutter's config.h. Now, we define the
	GL header into the configure template and use it to create the
	cogl-defines.h file cogl.h includes.

2007-10-29  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/json/json-parser.c: Enable parsing of negative numbers;
	GScanner splits negative numbers into two tokens, so we need to
	special case them.

2007-10-29  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-script.c: Add the :filename and :filename-set
	properties, to retrieve the path of the currently parsed file (if
	:filename-set is TRUE) from the ClutterScriptable implementations.

2007-10-28  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-effect.c:
	Small doc fix (#584)

2007-10-27  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/json/json-parser.c:
	(json_scanner_msg_handler): Set the GError to be returned by
	the parsing functions into the GScanner error message handler.

	(json_parser_object): Return the symbol token in case we have
	a parse error after the member name.

	(json_parser_load_from_data): Propagate the error set in the
	message handler, if any.

	* clutter/json/json-node.c (json_node_free): Unref the objects
	only if are set, to avoid a couple of needless criticals we
	get on error.

	* tests/test-script.json: More properties.

2007-10-27  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-script.[ch]: Slight API change in the
	clutter_script_get_objects() function: now it takes
	object name/object return location pairs and returns the
	number of objects found and returned.

	* tests/test-script.c: Exercise the clutter_script_get_objects()
	function.

2007-10-27  Emmanuele Bassi  <ebassi@openedhand.com>
